--- a/Goals/src/app/app.component.html
+++ b/Goals/src/app/app.component.html
@@ -1,9 +1,3 @@
-<div>
-  <h1>My Watch List</h1>
-  <ul>
-    <li *ngFor="let goal of goals">
-      {{goal.id}} {{goal.name}}
-    </li>
-  </ul>
-  <p *ngIf="goals.length < 3">Your watch list is too small</p>
-</div>
+
+<!-- Nesting goal component, which is a child component of the root component using the goal component selector -->
+<app-goal></app-goal>
