--- a/Goals/src/app/goal/goal.component.html
+++ b/Goals/src/app/goal/goal.component.html
@@ -1,14 +1,29 @@
-<p>goal works!</p>
+<div class="container">
   <h1>My Watch List</h1>
-  <ul>
-    <div *ngFor="let goal of goals; let i = index">
-      <li appStrikethrough>
-        {{goal.name}}
-      </li>
-      <button (click)="toggleDetails(i)">Toggle Details</button>
-      <app-goal-detail *ngIf="goal.showDescription" [goal]="goal" (isComplete)="completeGoal($event, i)"></app-goal-detail>
-      <!-- $event is a placeholder for values that are expected to be emitted by the event
+  <hr>
+  <div class="row">
+    <div class="col-md-6">
+      <div *ngFor="let goal of goals; let i = index">
+        <div>
+          <h6 id="{{i}}" appStrikethrough>{{goal.name}}</h6>
+          <button (click)="toggleDetails(i)" class="btn btn-primary">Toggle Details</button>
+        </div>
+        <div *ngIf="goal.showDescription">
+          <app-goal-detail [goal]="goal" (isComplete)="completeGoal($event, i)" (isDelete)="deleteGoal($event, i)">
+          </app-goal-detail>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <app-goal-form (addGoal)="addNewGoal($event)"></app-goal-form>
+  </div>
+
+  <!-- $event is a placeholder for values that are expected to be emitted by the event
       completeGoal is triggered when event is captured from child component that is goal-detail -->
 
-    </div>
-    <p *ngIf="goals.length < 3">Your watch list is too small</p>
+
+  <p *ngIf="goals.length < 3">Your watch list is too small</p>
+
+
+</div>
