various file changes for form validation and import of forms module done in the app.module.ts file

--- a/Goals/src/app/goal-detail/goal-detail.component.html
+++ b/Goals/src/app/goal-detail/goal-detail.component.html
@@ -3,4 +3,6 @@
     {{ goal.description }}
 </p>
 <button (click)="goalComplete (true)">Complete</button>
+<button (click)="goalDelete (true)">Delete Goal</button>
+
 
