--- a/Goals/src/app/goal/goal.component.html
+++ b/Goals/src/app/goal/goal.component.html
@@ -24,6 +24,12 @@
 
 
   <p *ngIf="goals.length < 3">Your watch list is too small</p>
+  <div class="row">
+    <blockquote class="blockquote text-center">
+      <p class="mb-0">{{quote.quote}}</p><br>
+      <footer class="blockquote-footer"><cite>{{quote.author}}</cite></footer>
+    </blockquote>
+  </div>
 
 
 </div>
